--- a/frontend/index.html
+++ b/frontend/index.html
@@ -63,9 +63,18 @@
 
   </main>
 
-  <script src="js/jquery.min.js"></script>
+    <script src="js/jquery.min.js"></script>
   <script src="js/jquery.spapp.min.js"></script>
+
+  <!-- Services FIRST (MVC requirement: only services talk to API) -->
+  <script src="js/services/config.js"></script>
+  <script src="js/services/auth.service.js"></script>
+  <script src="js/services/api.service.js"></script>
+  <script src="js/services/validation.service.js"></script>
+
+  <!-- Then main controller -->
   <script src="js/app.js"></script>
+
 
 </body>
 </html>
